# face-it

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  PROGRESS.md  README.md  TESTING_PLAN.md  build-worker.sh
.github/workflows/: ci.yml
api-server/: Cargo.toml  Dockerfile
api-server/src/: config.rs  error.rs  handlers.rs  kube.rs  lib.rs  main.rs  server.rs  state.rs
api-server/src/handlers/: authenticate.rs  health.rs
api-server/src/kube/: client.rs  mock.rs  pod_manager.rs  traits.rs
api-server/tests/: integration_e2e_auth.rs  integration_pod_pool.rs
common/: Cargo.toml
common/src/: error.rs  lib.rs  types.rs
k8s/: README.md  api-server-deployment.yaml  embeddings-secret.yaml  namespaces.yaml  rbac.yaml  worker-deployment.yaml
test-data/: README.md  embeddings.json  generate_real_embeddings.py  generate_synthetic_faces.py  pyproject.toml
test-utils/: Cargo.toml
test-utils/src/: lib.rs
worker/: Cargo.toml  Dockerfile
worker/src/: config.rs  embeddings.rs  error.rs  face.rs  handlers.rs  main.rs  server.rs
worker/src/embeddings/: database.rs
worker/src/face/: matcher.rs  model.rs
worker/src/handlers/: authenticate.rs  health.rs  ready.rs
