[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api-server"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Crate-specific
kube = { version = "0.87", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
async-trait = "0.1"

# Local dependencies
common = { path = "../common" }

[dev-dependencies]
serial_test = "3.0"
http = "1.0"
test-utils = { path = "../test-utils" }
base64 = "0.22"
